--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
 
     <meta name="theme-color" content="#000000" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="/manifest.json" />
 
     <!-- Favicon -->
@@ -29,12 +29,13 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-
-    <title>jojooshop</title>
-    <meta
-      name="description"
-      content="The starting point for your next project with jojooshop, built on the newest version of Material-UI ©, ready to be customized to your style"
-    />
+    <title>JoJooShop - Your Ultimate Online Shopping Destination</title>
+    <meta 
+    name="description" 
+    content="Discover a world of exclusive products at JoJooShop. Shop with confidence and enjoy a seamless online shopping experience."
+    >
+    
+    <link rel="canonical" href="https://jojooshop.com/" />
     <meta name="keywords" content="jojooshop" />
     <meta name="author" content="jojooshop" />
   </head>
